environments/dev/apps/catalog/services/catalog/base/config/100-dbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: catalog-database
    app.openshift.io/runtime: postgresql
    app.kubernetes.io/part-of: app-catalog
  name: catalog-database
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog-database
      app.kubernetes.io/part-of: app-catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: catalog-database
        app.kubernetes.io/name: catalog-database
        app.kubernetes.io/part-of: app-catalog
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:10-el8
        imagePullPolicy: IfNotPresent
        name: catalog-database
        ports:
          - containerPort: 5432
            protocol: TCP
        resources: {}
      serviceAccountName: default
status: {}
