environments/dev/apps/catalog/services/catalog/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    app.openshift.io/vcs-uri: https://github.com/globex-retail/catalog.git?ref=HEAD
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"inventory"}]
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: app-catalog
    app.openshift.io/runtime: spring
  name: catalog
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog
      app.kubernetes.io/part-of: app-catalog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: catalog
        app.kubernetes.io/part-of: app-catalog
    spec:
      containers:
      - image:   "quay.io/globex/catalog:main-49c1202c5b710319d5efce3350cf14a7a0e18c7f"
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
