environments/dev/apps/catalog/services/catalog/base/config/200-dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: catalog-database
    app.kubernetes.io/part-of: app-catalog
  name: catalog-database
  namespace: dev
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: catalog-database
status:
  loadBalancer: {}
