environments/dev/apps/catalog/services/catalog/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: app-catalog
  name: catalog
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: app-catalog
status:
  loadBalancer: {}
