environments/dev/apps/catalog/services/catalog/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: catalog
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: catalog
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
